@@ -1,0 +1,39 @@
+from ftw.builder.content import register_dx_content_builders
+from ftw.builder.testing import BUILDER_LAYER
+from ftw.builder.testing import functional_session_factory
+from ftw.builder.testing import set_builder_session_factory
+from plone.app.testing import applyProfile
+from plone.app.testing import FunctionalTesting
+from plone.app.testing import PLONE_FIXTURE
+from plone.app.testing import PloneSandboxLayer
+from plone.testing import z2
+from zope.configuration import xmlconfig
+
+
+class TaggingLayer(PloneSandboxLayer):
+
+    defaultBases = (PLONE_FIXTURE, BUILDER_LAYER)
+
+    def setUpZope(self, app, configurationContext):
+        xmlconfig.string(
+            '<configure xmlns="http://namespaces.zope.org/zope">'
+            '  <include package="z3c.autoinclude" file="meta.zcml" />'
+            '  <includePlugins package="plone" />'
+            '  <includePluginsOverrides package="plone" />'
+            '</configure>',
+            context=configurationContext)
+
+        # The tests will fail with a
+        # `ValueError: Index of type DateRecurringIndex not found` unless
+        # the product 'Products.DateRecurringIndex' is installed.
+        z2.installProduct(app, 'Products.DateRecurringIndex')
+
+    def setUpPloneSite(self, portal):
+        applyProfile(portal, 'ftw.tagging:default')
+
+
+TAGGING_FIXTURE = TaggingLayer()
+FUNCTIONAL_TESTING = FunctionalTesting(
+    bases=(TAGGING_FIXTURE,
+           set_builder_session_factory(functional_session_factory)),
+    name="ftw.tagging:functional")
