@@ -5,6 +5,8 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
+- Add support for Dexterity. [mbaechtold]
+
 - Drop Plone 4.0 and 4.1 support.
   [jone]
 
